methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value color
  while (color.green==true) {
         ^SlugTracking:6: error: not found: value color
    if (color.green==false) {
        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (color.green==true) {
  ^