methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  getCouleurSol();
  while (color.green==true) {
    avance();
    if (color.green==false) {
    recule();
    gauche();
    avance();
  }
  }
  
}